--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,4 +1,22 @@
 body {
+  
+  background-color: rgb(0, 0, 0);
+  background-image: url("https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdzcxYmRjYXNmOWd4dW03d29waWIwZzNiNm14bTI1YmM1MzV1ZDMyNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/TTWnfO964s245vzY4e/giphy.webp");
+  
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; 
+
+}
+  
+
+
+
+
+
+
+/*body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +28,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+}*/
